Dockerfiles, .conf's and docker-compose.yml done, need to test.

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,19 @@
 DOMAIN_NAME=jaimmart.42.fr
 # certificates
-CERTS_=./XXXXXXXXXXXX
+#CERTS_=./XXXXXXXXXXXX
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=XXXXXXXXXXXX
-MYSQL_USER=XXXXXXXXXXXX
-MYSQL_PASSWORD=XXXXXXXXXXXX
+#MYSQL_ROOT_PASSWORD=XXXXXXXXXXXX
+#MYSQL_USER=XXXXXXXXXXXX
+#MYSQL_PASSWORD=XXXXXXXXXXXX
+
+# MariaDB env variables
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wordpress_user
+MYSQL_PASSWORD=wordpress_password
+
+# WordPress env variables
+WORDPRESS_DB_HOST=db
+WORDPRESS_DB_USER=wordpress_user
+WORDPRESS_DB_PASSWORD=wordpress_password
+WORDPRESS_DB_NAME=wordpress
