Changed docker-compose version to match VM.

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -26,7 +26,7 @@ server
     #  Inicia un bloque de configuración para la ubicación raíz (/), que define cómo manejar las solicitudes para la raíz del servidor.
     location /
     {
-        # intenta servir archivos directamente desde el sistema de archivos. Si no encuentra el archivo solicitado, intenta servir el 
+        # Intenta servir archivos directamente desde el sistema de archivos. Si no encuentra el archivo solicitado, intenta servir el 
         # archivo index.php pasando cualquier argumento de la consulta ($is_args$args).
         try_files   $uri $uri/ index.php$is_args$args;
     }
