--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -y mariadb-server mariadb-client \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ./conf/my.conf /etc/mysql/my.conf
+#COPY ./conf/my.conf /etc/mysql/my.conf
 
 VOLUME /var/lib/mysql
 
