Location block for managing PHP uncommented.

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -33,18 +33,18 @@ server
 
     # Inicia un bloque de configuración para manejar las solicitudes a archivos PHP. El patrón ~ \.php$ indica que se aplicará a 
     # cualquier archivo que termine en .php.
-    #location ~ \.php$
-    #{
+    location ~ \.php$
+    {
     #    # Intenta servir el archivo PHP solicitado y si no lo encuentra retorna error 404
-    #    try_files   $uri =404;
+        try_files   $uri =404;
     #    # Define que las solicitudes PHP deben ser manejadas por el servicio FastCGI en wordpress:9000. Aquí, wordpress debe ser el 
     #    # nombre del contenedor de WordPress en la red de Docker.
-    #    fastcgi_pass    wordpress:9000;
+        fastcgi_pass    wordpress:9000;
     #    # Establece index.php como el archivo índice predeterminado para las solicitudes FastCGI.
-    #    fastcgi_index   index.php;
+        fastcgi_index   index.php;
     #    # Incluye un archivo de configuración estándar (fastcgi_params) que define parámetros adicionales para FastCGI.
-    #    include fastcgi_params;
-    #}
+        include fastcgi_params;
+    }
 }
 
 # La configuración de NGINX se organiza en bloques de configuración, cada uno de los cuales define diferentes aspectos del servidor.
