--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -14,7 +14,12 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -subj "/C=XX/ST=XX/L=XX/O=XX/OU=XX/CN=jaimmart.42.fr"
 
 # Copia archivos o directorios desde el sistema de archivos del host al sistema de archivos del contenedor.
-COPY ./conf/nginx.conf /etc/nginx/conf.d/nginx.conf
+#COPY ./conf/nginx.conf /etc/nginx/conf.d/nginx.conf
+
+# Copia el archivo de configuracion personalizado a sites-available
+COPY ./conf/nginx.conf /etc/nginx/sites-available/default
+# Crea un enlace simbólico en sites-enabled para acceder activar la configuracion personalizada
+RUN ln -s /etc/nginx/sites-available/default /etc/nginx/sites-enabled/
 
 # Informa a Docker que el contenedor escucha en puertos de red específicos en tiempo de ejecución.
 EXPOSE 443
