Now creating full nginx.conf to avoid nonsense.

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,49 +1,51 @@
-server
-{
-    # Configura el servidor para que escuche en el puerto 443 con SSL/TLS habilitado.
-    listen  443 ssl;
-    # Habilitar escucha para conexiones IPv6
-    listen [::]:443 ssl;
-    # Define el nombre del servidor (dominio) que NGINX utilizará para esta configuración.
-    server_name jaimmart.42.fr www.jaimmart.42.fr;
-    # Define el directorio raíz desde donde se servirán los archivos.
-    root    /var/www/html;
-    # Establece el archivo índice predeterminado para las solicitudes de directorios.
-    index   index.php;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
+events {
+    worker_connections 768;
+    # multi_accept on;
+}
 
-    # SSL Settings
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # Especifica la ruta al certificado SSL.
-    ssl_certificate /etc/ssl/certs/jaimmart.42.fr.crt;
-    # Especifica la ruta a la clave privada del certificado SSL.
-    ssl_certificate_key /etc/ssl/private/jaimmart.42.fr.key;
-    # Configura NGINX para que solo use TLSv1.2 y TLSv1.3, asegurando que se utilicen protocolos seguros.
-    ssl_protocols   TLSv1.2 TLSv1.3;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-    # Location Settings
+    gzip on;
+    gzip_disable "msie6";
 
-    #  Inicia un bloque de configuración para la ubicación raíz (/), que define cómo manejar las solicitudes para la raíz del servidor.
-    location /
-    {
-        # Intenta servir archivos directamente desde el sistema de archivos. Si no encuentra el archivo solicitado, intenta servir el 
-        # archivo index.php pasando cualquier argumento de la consulta ($is_args$args).
-        try_files   $uri $uri/ index.php$is_args$args;
-    }
+    include /etc/nginx/conf.d/*.conf;
 
-    # Inicia un bloque de configuración para manejar las solicitudes a archivos PHP. El patrón ~ \.php$ indica que se aplicará a 
-    # cualquier archivo que termine en .php.
-    location ~ \.php$
-    {
-    #    # Intenta servir el archivo PHP solicitado y si no lo encuentra retorna error 404
-        try_files   $uri =404;
-    #    # Define que las solicitudes PHP deben ser manejadas por el servicio FastCGI en wordpress:9000. Aquí, wordpress debe ser el 
-    #    # nombre del contenedor de WordPress en la red de Docker.
-        fastcgi_pass    wordpress:9000;
-    #    # Establece index.php como el archivo índice predeterminado para las solicitudes FastCGI.
-        fastcgi_index   index.php;
-    #    # Incluye un archivo de configuración estándar (fastcgi_params) que define parámetros adicionales para FastCGI.
-        include fastcgi_params;
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name jaimmart.42.fr www.jaimmart.42.fr;
+        root /var/www/html;
+        index index.php;
+
+        ssl_certificate /etc/ssl/certs/jaimmart.42.fr.crt;
+        ssl_certificate_key /etc/ssl/private/jaimmart.42.fr.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
+
+        location / {
+            try_files $uri $uri/ index.php$is_args$args;
+        }
+
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+        }
     }
 }
 
