--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,7 +17,7 @@ RUN mkdir -p /var/www/html
 RUN curl -O https://wordpress.org/latest.tar.gz \
     && tar -xzvf latest.tar.gz \
     && rm latest.tar.gz \
-    && mv wordpress /var/www/html \
+    && mv wordpress/* /var/www/html \
     && chown -R www-data:www-data /var/www/html
 
 # Configurar PHP-FPM
