Added 1 more conf parameter to nginx.conf and permissions on /var/www/html to try to avoid 403 error

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,16 +1,23 @@
 server {
+    # Configura el servidor para que escuche en el puerto 443 con SSL/TLS habilitado.
     listen 443 ssl;
+    # Habilitar escucha para conexiones IPv6
     listen [::]:443 ssl;
+    # Define el nombre del servidor (dominio) que NGINX utilizará para esta configuración.
     server_name jaimmart.42.fr www.jaimmart.42.fr;
+    # Define el directorio raíz desde donde se servirán los archivos.
     root /var/www/html;
-    index index.php;
+    # Establece el archivo índice predeterminado para las solicitudes de directorios.
+    index index.php index.html index.htm;
 
+    # SSL Settings
     ssl_certificate /etc/ssl/certs/jaimmart.42.fr.crt;
     ssl_certificate_key /etc/ssl/private/jaimmart.42.fr.key;
     ssl_protocols TLSv1.2 TLSv1.3;
 
+    # Location Settings
     location / {
-        try_files $uri $uri/ index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
@@ -18,6 +25,7 @@ server {
         fastcgi_pass wordpress:9000;
         fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
 
