Added default ndinx-debian.html(dont have wordpress files yet) to nginx.conf default indexes

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ server {
     # Define el directorio raíz desde donde se servirán los archivos.
     root /var/www/html;
     # Establece el archivo índice predeterminado para las solicitudes de directorios.
-    index index.php index.html index.htm;
+    index index.php index.html index.htm index.nginx-debian.html;
 
     # SSL Settings
     ssl_certificate /etc/ssl/certs/jaimmart.42.fr.crt;
