removing residual wordpress directory.

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -18,6 +18,7 @@ RUN curl -O https://wordpress.org/latest.tar.gz \
     && tar -xzvf latest.tar.gz \
     && rm latest.tar.gz \
     && mv wordpress/* /var/www/html/ \
+    && rm -rf wordpress \
     && chown -R www-data:www-data /var/www/html \
     && chmod -R 755 /var/www/html
 
