--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     container_name: nginx
     ports:
       - "443:443"
+    volumes:
+      - wordpress_data:/var/www/html
     networks:
       - wp-network
     depends_on:
