--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
     wget \
     unzip \
     iputils-ping \
-    mysql-client \
+    default-mysql-client \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
