Create new conf file in mariadb.conf.d/ to listen in all interfaces...

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update && apt-get install -y mariadb-server mariadb-client \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+RUN echo "[mysqld]" > /etc/mysql/mariadb.conf.d/99-bind-address.cnf \
+    && echo "bind-address=0.0.0.0" >> /etc/mysql/mariadb.conf.d/99-bind-address.cnf
 #COPY ./conf/my.conf /etc/mysql/my.conf
 
 VOLUME /var/lib/mysql
