--- a/srcs/.env
+++ b/srcs/.env
@@ -12,7 +12,7 @@ WORDPRESS_DB_USER=wordpress_user
 WORDPRESS_DB_PASSWORD=wordpress_password
 WORDPRESS_DB_NAME=wordpress
 
-# WordPress admin user(check rules for admin name in subject)
+# WordPress admin user
 WORDPRESS_ADMIN_USER=admin
 WORDPRESS_ADMIN_PASSWORD=admin_password
 WORDPRESS_ADMIN_EMAIL=admin@example.com
