--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,20 +1,12 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y mariadb-server mariadb-client \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y mariadb-server
 
-RUN echo "[mysqld]" > /etc/mysql/mariadb.conf.d/99-bind-address.cnf \
-    && echo "bind-address=0.0.0.0" >> /etc/mysql/mariadb.conf.d/99-bind-address.cnf
-#COPY ./conf/my.conf /etc/mysql/my.conf
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+COPY ./conf/db-start.sh /db-start.sh
 
-VOLUME /var/lib/mysql
+RUN mkdir /run/mysql
 
-EXPOSE 3306
+RUN chmod +x /db-start.sh
 
-COPY ./conf/docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-
-ENTRYPOINT [ "docker-entrypoint.sh" ]
-
-CMD [ "mysqld" ]
+CMD ["/db-start.sh"]
