--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,15 +11,19 @@ server {
     index index.php index.html index.htm index.nginx-debian.html;
 
     # SSL Settings
+    # Especifica la ruta del archivo del certificado SSL.
     ssl_certificate /etc/ssl/certs/jaimmart.42.fr.crt;
+    # Especifica la ruta de la clave privada SSL asociada al certificado.
     ssl_certificate_key /etc/ssl/private/jaimmart.42.fr.key;
+    # Define los protocolos SSL/TLS permitidos.
     ssl_protocols TLSv1.2 TLSv1.3;
 
-    # Location Settings
+    # Configura la ubicación raíz.
+    # intenta servir el archivo solicitado, si no existe, pasa la solicitud a index.php con los argumentos de la consulta.
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
-
+    # Configura la ubicación para manejar archivos PHP.
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_pass wordpress:9000;
@@ -28,6 +32,13 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
+
+# try_files $uri =404; intenta servir el archivo solicitado, si no existe, devuelve un error 404.
+# fastcgi_pass wordpress:9000; redirige las solicitudes PHP al servidor FastCGI en el contenedor wordpress en el puerto 9000.
+# fastcgi_index index.php; especifica el archivo índice para solicitudes FastCGI.
+# include fastcgi_params; incluye los parámetros FastCGI predeterminados.
+# fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; establece la variable SCRIPT_FILENAME necesaria para FastCGI, 
+# que apunta al archivo PHP solicitado.
 
 # La configuración de NGINX se organiza en bloques de configuración, cada uno de los cuales define diferentes aspectos del servidor.
 
