To avoid error 502 when starting from 0, now wp-start.sh verify if mariadb is fully available...

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-  db:
+  mariadb:
     build:
       context: ./requirements/mariadb
     container_name: mariadb
@@ -29,7 +29,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      - mariadb
     restart: always
 
   nginx:
