changed WORDPRESS_DB_HOST to match name of service

--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,7 @@ MYSQL_USER=wordpress_user
 MYSQL_PASSWORD=wordpress_password
 
 # WordPress env variables
-WORDPRESS_DB_HOST=db
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_DB_USER=wordpress_user
 WORDPRESS_DB_PASSWORD=wordpress_password
 WORDPRESS_DB_NAME=wordpress
